--- a/sso-vip/src/main/resources/templates/index.html
+++ b/sso-vip/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
 <h1>欢迎来到VIP系统</h1>
 <span>
         <a th:if="${session.loginUser == null}" href="http://login.codeshop.com:9000/view/login?target=http://vip.codeshop.com:9011/view/index">登录</a>
-        <a th:unless="${session.loginUser == null}" href="http://login.codeshop.com:9000/view/login/loginOut?target=http://vip.codeshop.com:9011/view/index">退出</a>
+        <a th:unless="${session.loginUser == null}" href="http://login.codeshop.com:9000/login/loginOut?target=http://vip.codeshop.com:9011/view/index">退出</a>
     </span>
 <p th:unless="${session.loginUser == null}">
     <span style="color: deepskyblue;" th:text="${session.loginUser.username}"></span>已登录
